--- a/pagina2.html
+++ b/pagina2.html
@@ -3,20 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Layons - Detalles</title>
-    <link rel="stylesheet" href="style.css">
+    <title>El Layons - Hobbies y Gustos</title>
+    <link rel="stylesheet" href="Styles/stylePag2.css">
 </head>
 <body>
     <header>
-        <h1 class="title">Padre - Detalles</h1>
+        <h1 class="title">Los Hobbies de Padre</h1>
     </header>
 
-    <section class="content">
-        <p>Layons, excelente, guerrero de guerreros.</p>
+    <!-- Sección de Excel -->
+    <section class="excel">
+        <h2>Excel: ¡La herramienta de los genios organizados!</h2>
+        <p>A mi padre le encanta Excel. Lo que otros ven como una simple hoja de cálculo, él lo convierte en un espacio para la creatividad y 
+            el control total. Cada fórmula y cada tabla que crea es una obra maestra de organización. Aquí hay una pequeña muestra de lo que 
+            suele trabajar:</p>
+        <table id="excel-table">
+            <tr>
+                <th>Item</th>
+                <th>Descripción</th>
+                <th>Importancia</th>
+            </tr>
+            <tr>
+                <td>Proyecto</td>
+                <td>Crear nueva hoja</td>
+                <td>Alta</td>
+            </tr>
+            <tr>
+                <td>Datos</td>
+                <td>Organizar cifras y gráficos</td>
+                <td>Media</td>
+            </tr>
+            <tr>
+                <td>Análisis</td>
+                <td>Analizar tendencias con tablas dinámicas</td>
+                <td>Alta</td>
+            </tr>
+        </table>
+    </section>
+
+    <!-- Sección de Gatos -->
+    <section class="cats">
+        <h2>Gatos: Los mejores compañeros de vida</h2>
+        <p>En casa, los gatos son parte de la familia y Layons lo sabe. Con su andar sigiloso y mirada curiosa, llenan de alegría y serenidad 
+            cada rincón. Cada día con la esperpenta es una nueva aventura de ronroneos y travesuras.</p>
+        <img src="Trabajo/gato.jpg" alt="Gato lindo" class="cat-image" id="cat-image">
+        <p>Haz clic en el gato para contar cuántas veces has acariciado esa ratoncia, aunque sabemos que nunca es suficiente:</p>
+        <button id="cat-clicker">Caricias a la ñeca: 0</button>
+    </section>
+
+    <!-- Sección de FIFA -->
+    <section class="fifa">
+        <h2>FIFA: La pasión por el fútbol en tus manos</h2>
+        <p>FIFA es más que un juego para él, es una pasión. Cada partido es una oportunidad para demostrar su habilidad, estrategia y 
+            conocimiento profundo del fútbol. Ya sea jugando con su equipo favorito o creando su propio club, siempre encuentra el camino 
+            hacia la victoria.</p>
+        <div class="card fifa-card">
+            <h3>FIFA 2024</h3>
+            <p>El juego donde cada movimiento cuenta, desde el regate perfecto hasta el gol más espectacular.</p>
+        </div>
+        <div class="card fifa-card">
+            <h3>Logro: Campeón de liga</h3>
+            <p>Con su equipo personalizado, alcanzó la cima en el modo carrera, superando a rivales de todo el mundo.</p>
+        </div>
+    </section>
+
+    <!-- Sección de Arroz con Leche -->
+    <section class="rice-pudding">
+        <h2>Arroz con Leche:</h2>
+        <p>El arroz con leche es uno de esos postres que le encanta, aunque no sabe hacerlo . Aquí os dejo la receta Layons:</p>
+        <ul>
+            <li>1 taza de arroz</li>
+            <li>2 tazas de leche</li>
+            <li>Azúcar al gusto</li>
+            <li>Canela en polvo para espolvorear</li>
+        </ul>
+        <p>La clave está en cocinarlo lentamente, con paciencia, hasta que el arroz esté perfectamente suave y la leche tenga esa textura 
+            cremosa inigualable.</p>
+    </section>
+
+    <!-- Sección de Computadoras -->
+    <section class="computers">
+        <h2>Computadoras: Su mundo de creatividad y tecnología</h2>
+        <p>Mi padre ha pasado años perfeccionando su conocimiento sobre computadoras. No hay equipo que no haya desarmado, optimizado o mejorado.
+            Ya sea una poderosa PC de escritorio o un portátil elegante, siempre encuentra la forma de sacar el máximo rendimiento. Estas son algunas de sus máquinas favoritas:</p>
+        <ul>
+            <li>Intel: Potencia y diseño en un solo lugar.</li>
+            <li>PC personalizada con Ryzen: Su joya de la corona, construida pieza por pieza con dedicación.</li>
+        </ul>
     </section>
 
     <footer>
         <p>Volver a la <a href="Index.html">página principal</a></p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
