--- a/pagina2.html
+++ b/pagina2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="title">Los Hobbies de Padre</h1>
+        <h1 class="title">Algunos datos de mi Padre</h1>
     </header>
 
     <!-- Sección de Excel -->
