--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
     </section>
 
     <footer>
-        <p>© 2024 - Homenaje a Padre</p>
+        <p>© 2024 - Homenaje a mi Padre</p>
     </footer>
 
     <script src="script.js"></script>
