--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         <p>© 2024 - Homenaje a mi Padre</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
