--- a/pagina2.html
+++ b/pagina2.html
@@ -96,6 +96,6 @@
         <p>Volver a la <a href="Index.html">página principal</a></p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
