--- a/pagina2.html
+++ b/pagina2.html
@@ -46,7 +46,9 @@
         <h2>Gatos: Los mejores compañeros de vida</h2>
         <p>En casa, los gatos son parte de la familia y Layons lo sabe. Con su andar sigiloso y mirada curiosa, llenan de alegría y serenidad 
             cada rincón. Cada día con la esperpenta es una nueva aventura de ronroneos y travesuras.</p>
-        <img src="Imagine/La hemocha.jpeg" alt="Gato lindo" class="cat-image" id="cat-image">
+            <div class="cat-container">
+                <img src="Imagine/La hemocha.jpeg" alt="Gato lindo" class="cat-image" id="cat-image">
+            </div>            
         <p>Haz clic en el gato para contar cuántas veces has acariciado esa ratoncia, aunque sabemos que nunca es suficiente:</p>
         <button id="cat-clicker">Caricias a la ñeca: 0</button>
     </section>
