--- a/pagina2.html
+++ b/pagina2.html
@@ -95,7 +95,7 @@
     </section>
 
     <footer>
-        <p>Volver a la <a href="Index.html">página principal</a></p>
+        <p>Volver a la <a href="index.html">página principal</a></p>
     </footer>
 
     <script src="JS/script.js"></script>
